Fixed CWE-470